# manim_gpt

./: .env  INSTALL.md  README.md  pyproject.toml  start.py
app/api/: main.py
app/api/routes/: generation.py  health.py  voice.py
app/core/: config.py  logger.py
app/models/: schemas.py
app/services/: llm_service.py  manim_service.py  qwen_omni_service.py  voice_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
