[project]
name = "manim-gpt"
version = "0.1.0"
description = "An open-source project combining LLM and Manim for generating mathematical animations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.3.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
]
